# Python-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  modules.rst  python_project.rst
examples/: example.py
requirements/: dev.txt
src/python_project/: __init__.py  hello.py
tests/: test_hello.py
